--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -6,6 +6,10 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <header></header>
+    <!-- Music by <a href="https://pixabay.com/users/royaltyfreemusic-29393722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=131647">Nver Avetyan</a> from <a href="https://pixabay.com/music//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=131647">Pixabay</a> -->
+    <!-- Music by <a href="https://pixabay.com/users/freegroove-20279938/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=112783">Francesco Biondi</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=112783">Pixabay</a> -->
+    <main></main>
+    <footer></footer>
 </body>
 </html>
