--- a/index.html
+++ b/index.html
@@ -2,10 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Mercy Mo</title>
+    <link rel="shortcut icon" href="Media/Mercy.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+        <!-- -------Header Video-------- -->
+    <header>
+        <video playsinline autoplay muted loop>
+            <source src="Media/Desert.mp4" type="video/webm">
+            Your browser does not support the video tag.
+        </video>
+        <div class="into">
+            <h1>BORONDO</h1>
+            <h3></h3>
+        </div>
+        <div class="logo">Mercy <span>Moreno 🛩️</span></div>
+        <nav class="bar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#section1">Abobut Me</a></li>
+                <li><a href="#sec2">Portfolio</a></li>
+                <li><a href="#sec3">Products</a></li>
+                <li><a href="#sec4">Contac Me</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main></main>
+    <footer></footer> 
 </body>
 </html>
