--- a/index.html
+++ b/index.html
@@ -1,36 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Title -->
     <title>Mercy Mo</title>
+    <!-- Icon for title -->
     <link rel="shortcut icon" href="Media/Mercy.png" type="image/x-icon">
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- The hamburger menu for small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
+
 <body>
-        <!-- -------Header Video-------- -->
     <header>
-        <video playsinline autoplay muted loop>
-            <source src="Media/Desert.mp4" type="video/webm">
-            Your browser does not support the video tag.
-        </video>
-        <div class="into">
-            <h1>BORONDO</h1>
-            <h3></h3>
-        </div>
-        <div class="logo">Mercy <span>Moreno 🛩️</span></div>
+        <!-- Main Name Logo -->
+<!--         <div class="logo"> <span><a href="#">Mercy Mo 🛩️</a></span></div> -->
         <nav class="bar">
+            <!-- Nav Bar Menu -->
             <ul>
+                <li> <button onclick="location.href='#'">Mercy <span>Mo 🛩️</span></button></li>
                 <li><a href="#">Home</a></li>
-                <li><a href="#section1">Abobut Me</a></li>
-                <li><a href="#sec2">Portfolio</a></li>
-                <li><a href="#sec3">Products</a></li>
-                <li><a href="#sec4">Contac Me</a></li>
+                <li><a href="#sec1">About</a></li>
+                <li><a href="#sec2">Journeys</a></li>
+                <li><a href="#sec3">Portfolio</a></li>
+                <li><a href="#sec4">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <br>
+    <main>
+        <!-- Background video -->
+        <video id="background-video" autoplay loop muted>
+            <source src="Media/Desert.mp4" type="video/mp4">
+        </video>
+        <!-- Call out -->
+        <div class="call">
+            <img id="call-image" src="Media/zen.png" alt="Pozos Azules">
+            <h1>Travel Adventures</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
+                laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus laboriosam aliquid
+                doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci illo
+                reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
+                reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
+                expedita aliquid?</p>
+            <a href="">More info</a>
+        </div>
+    </main>
+    <!-- (h2#sec${Mi Título $}+section.section.sec$)*4 -->
+    <h2 id="sec1">About Me</h2>
+    <section class="section sec1">
+        <div class="">
+            <img id="" src="Media/Mercy.png" alt="Pozos Azules">
+            <h1>Lorem</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
+                laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci
+                illo reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
+                reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
+                expedita aliquid?</p>
+            <a href="Pages/About.html">About Me</a>
+        </div>
+    </section>
+    <h2 id="sec2">Journeys</h2>
+    <section class="section sec2"></section>
+    <h2 id="sec3">Portfolio</h2>
+    <section class="section sec3"></section>
+    <h2 id="sec4">Contact Me</h2>
+    <section class="section sec4"></section>
 
-    <main></main>
-    <footer></footer> 
+    <footer>
+        <p> All rights reserved</p>
+        <div class="redes">
+            <a href="">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+
+        </div>
+    </footer>
+    <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
+
 </body>
+
 </html>
