contact html completed.

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 <body>
     <header>
         <!-- Main Name Logo -->
-<!--         <div class="logo"> <span><a href="#">Mercy Mo 🛩️</a></span></div> -->
+        <!--         <div class="logo"> <span><a href="#">Mercy Mo 🛩️</a></span></div> -->
         <nav class="bar">
             <!-- Nav Bar Menu -->
             <ul>
                 <li> <button onclick="location.href='#'">Mercy <span>Mo 🛩️</span></button></li>
                 <li><a href="#">Home</a></li>
-                <li><a href="#sec1">About</a></li>
-                <li><a href="#sec2">Journeys</a></li>
-                <li><a href="#sec3">Portfolio</a></li>
-                <li><a href="#sec4">Contact</a></li>
+                <li><a href="#sec1">About me</a></li>
+                <li><a href="#sec2">Travel Tips</a></li>
+                <li><a href="#sec3">Gallery</a></li>
+                <li><a href="#sec4">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -59,9 +59,8 @@
     </main>
     <!-- (h2#sec${Mi Título $}+section.section.sec$)*4 -->
     <h2 id="sec1">About Me</h2>
-    <section class="section sec1">
-        <div class="">
-            <img id="" src="Media/Mercy.png" alt="Pozos Azules">
+    <section class="sec1-about">
+            <img id="about-image" src="Media/Mercy.png" alt="Profile Photo">
             <h1>Lorem</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
                 laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
@@ -71,29 +70,56 @@
                 reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
                 expedita aliquid?</p>
             <a href="Pages/About.html">About Me</a>
-        </div>
     </section>
-    <h2 id="sec2">Journeys</h2>
-    <section class="section sec2"></section>
-    <h2 id="sec3">Portfolio</h2>
-    <section class="section sec3"></section>
+    <h2 id="sec2">Travel Tips</h2>
+    <section class="sec2-journeys">
+        <img id="journeys-image" src="Media/Mercy.png" alt="Profile Photo">
+        <h1>Lorem</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
+            laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci
+            illo reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
+            reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
+            expedita aliquid?</p>
+        <a href="Pages/travel.html">About Me</a>
+    </section>
+    <h2 id="sec3">Gallery</h2>
+    <section class="sec3-gallery">
+        <img id="portafolio-image" src="Media/Mercy.png" alt="Profile Photo">
+        <h1>Lorem</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
+            laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci
+            illo reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
+            reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
+            expedita aliquid?</p>
+        <a href="Pages/gallery.html">About Me</a>
+    </section>
     <h2 id="sec4">Contact Me</h2>
-    <section class="section sec4"></section>
-
+    <section class="sec4-contact">
+        <img id="contact-image" src="Media/Mercy.png" alt="Profile Photo">
+        <h1>Lorem</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
+            laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci
+            illo reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
+            reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
+            expedita aliquid?</p>
+        <a href="Pages/contact.html">About Me</a>
+    </section>
     <footer>
-        <p> All rights reserved</p>
         <div class="redes">
-            <a href="">
+            <a href="https://www.instagram.com/mercymolano?utm_source=qr">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="">
+            <a href="https://co.linkedin.com/in/mercymoreno">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-
         </div>
+        <p>© 2023 All rights reserved</p>
     </footer>
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
 
