--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Call out -->
         <div class="call">
             <img id="call-image" src="Media/zen.png" alt="Pozos Azules">
-            <h1>Travel Adventures</h1>
+            <h1>Hi! I'm Mercy the Traveler</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
                 laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
                 sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus laboriosam aliquid
@@ -54,26 +54,13 @@
                 amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
                 reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
                 expedita aliquid?</p>
-            <a href="">More info</a>
+            <a href="./Pages/travel.html">Travel Tips</a>
         </div>
     </main>
     <!-- (h2#sec${Mi Título $}+section.section.sec$)*4 -->
     <h2 id="sec1">About Me</h2>
     <section class="sec1-about">
-            <img id="about-image" src="Media/Mercy.png" alt="Profile Photo">
-            <h1>Lorem</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
-                laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci
-                illo reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
-                reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
-                expedita aliquid?</p>
-            <a href="Pages/About.html">About Me</a>
-    </section>
-    <h2 id="sec2">Travel Tips</h2>
-    <section class="sec2-journeys">
-        <img id="journeys-image" src="Media/Mercy.png" alt="Profile Photo">
+        <img id="about-image" src="Media/Mercy.png" alt="Profile Photo">
         <h1>Lorem</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
             laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
@@ -82,33 +69,109 @@
             sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
             reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
             expedita aliquid?</p>
-        <a href="Pages/travel.html">About Me</a>
+        <a href="Pages/About.html">My Story</a>
+    </section>
+    <h2 id="sec2">Travel Tips</h2>
+    <section class="sec2-travel">
+        <div class="sec2-travel-video">
+            <a href="./Pages/travel.html">
+                <video id="travel-vid" src="Media/Prague.MP4" autoplay loop muted></video>
+            </a>
+            <a href="./Pages/travel.html"> <h1>Lorem</h1></a>
+            <a href="./Pages/travel.html">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+                    dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
+                    obcaecati vel.</p>
+            </a>
+        </div>
+        <div class="sec2-travel-video">
+            <a href="./Pages/travel.html">            
+                 <video id="travel-vid" src="Media/Venecia.MP4" autoplay loop muted></video>
+                </a>
+           <a href="./Pages/travel.html"> 
+            <h1>Lorem</h1>
+        </a>
+        <a href="./Pages/travel.html">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+                dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
+                obcaecati vel.</p>
+        </a>
+        </div>
+        <div class="sec2-travel-video">
+            <a href="./Pages/travel.html">
+                <video id="travel-vid" src="Media/Italy2.MP4" autoplay loop muted></video>
+            </a>
+            <a href="./Pages/travel.html"> 
+                <h1>Lorem</h1>
+            </a>
+            <a href="./Pages/travel.html">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+                    dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
+                    obcaecati vel.</p>
+            </a>
+        </div>
+
     </section>
     <h2 id="sec3">Gallery</h2>
     <section class="sec3-gallery">
-        <img id="portafolio-image" src="Media/Mercy.png" alt="Profile Photo">
-        <h1>Lorem</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
-            laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci
-            illo reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
-            reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
-            expedita aliquid?</p>
-        <a href="Pages/gallery.html">About Me</a>
+        <div id="slider">
+            <figure>
+                <a href="./Pages/gallery.html">
+                    <img src="Media/Water.png">
+                </a>
+                <a href="./Pages/gallery.html">
+                    <img src="Media/Rest.jpeg">
+                </a>
+                <a href="./Pages/gallery.html">
+                    <img src="Media/People.JPG">
+                </a>
+                <a href="./Pages/gallery.html">
+                    <img src="Media/monument.png" alt="">
+                </a>
+                <a href="./Pages/gallery.html">
+                    <img src="Media/Mer.png" alt="">
+                </a>
+                <a href="./Pages/gallery.html">
+                    <img src="Media/graffiti.jpeg" alt="">
+                </a>
+                <a href="./Pages/gallery.html">
+                    <img src="Media/fade.JPG" alt="">
+                </a>
+
+            </figure>
+        </div>
     </section>
-    <h2 id="sec4">Contact Me</h2>
+    <h2 id="sec4"><a href="./Pages/contact.html">Contact Me</a></h2>
     <section class="sec4-contact">
-        <img id="contact-image" src="Media/Mercy.png" alt="Profile Photo">
-        <h1>Lorem</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
-            laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci
-            illo reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
-            reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
-            expedita aliquid?</p>
-        <a href="Pages/contact.html">About Me</a>
+<a href="./Pages/contact.html">
+    <h1 class="h-primary">
+        Feel free to ask my any question about my travels, blog or if you have any business inquires.
+    </h1>
+    <div class="contact-card">
+        <i class="fa-solid fa-pen-nib"></i>
+        <!-- <h2>Online Form</h2> -->
+        <form class="form" id="form-null">
+            <div class="form-field">
+                <input type="text" id="form-name" class="form-input" placeholder="Name*" required=""
+                    style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
+                    value="" maxlength="2000">
+            </div>
+            <div class="form-field">
+                <input type="email" id="form-email" class="form-input" placeholder="E-mail*" required=""
+                    style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
+                    value="" maxlength="2000">
+            </div>
+            <div class="form-field">
+                <input type="text" id="from-message" class="form-input" placeholder="Your message"
+                    style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
+                    value="" maxlength="2000">
+            </div>
+            <button type="submit" class="form-button">
+                Submit
+            </button>
+        </form>
+    </div>
+</a>
     </section>
     <footer>
         <div class="redes">
