travel tips completed

--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <br>
-    <main class="travelB">
+    <main class="travelbody">
         <div class="row">
             <div class="leftcolumn">
               <div class="card">
@@ -52,8 +52,8 @@
             </div>
             <div class="rightcolumn">
               <div class="card">
-                <h2>About Me</h2>
-                <div class="fakeimg" style="height:100px;">Image</div>
+                <h2><a href="./About.html">About Me</a></h2>
+                <div class="fakeimg1" style="height:100px;"><img src="../Media/Mercy.png" alt=""></div>
                 <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
               </div>
               <div class="card">
