changes in about me

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Title -->
-        <title>About Me</title>
-        <!-- Icon for title -->
-        <link rel="shortcut icon" href="../Media/Mercy.png" type="image/x-icon">
-        <!-- CSS -->
-        <link rel="stylesheet" href="styles.css">
-        <!-- The hamburger menu for small screens -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Icons -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me</title>
+    <!-- Icon for title -->
+    <link rel="shortcut icon" href="../Media/Mercy.png" type="image/x-icon">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../styles.css">
+    <!-- The hamburger menu for small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
 <body>
     <header>
         <!-- Main Name Logo -->
@@ -24,7 +24,7 @@
         <nav class="bar">
             <!-- Nav Bar Menu -->
             <ul>
-                <li> <button onclick="location.href='#'">Mercy <span>Mo 🛩️</span></button></li>
+                <li> <button onclick="location.href='../index.html'">Mercy <span>Mo 🛩️</span></button></li>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./About.html">About me</a></li>
                 <li><a href="./travel.html">Travel Tips</a></li>
@@ -34,11 +34,45 @@
         </nav>
     </header>
     <br>
-    <!-- Music by <a href="https://pixabay.com/users/royaltyfreemusic-29393722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=131647">Nver Avetyan</a> from <a href="https://pixabay.com/music//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=131647">Pixabay</a> -->
-    <!-- Music by <a href="https://pixabay.com/users/freegroove-20279938/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=112783">Francesco Biondi</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=112783">Pixabay</a> -->
-    <main></main>
+    <main class="about-body">
+        <section class="about-section" id="hero">
+            <div>
+                <img src="../Media/Mercy.png" class="profile-img">
+                <h1>Hi, I'm Lorem the Traveler.</h1>
+            </div>
+        </section>
+
+        <section class="about-section" id="hero">
+<div class="results">
+    <h1>Some of the Results I'm Proud of</h1>
+<div class="section-inner">
+    <div class="section-inner2">
+        <p>#</p>
+        <p>Lorem ipsum</p>
+    </div>
+    <div class="section-inner2">
+        <p>#</p>
+        <p>Lorem ipsum</p>
+    </div>
+    <div class="section-inner2">
+        <p>#</p>
+        <p>Lorem ipsum</p>
+    </div>
+    <div class="section-inner2">
+        <p>#</p>
+        <p>Lorem ipsum</p>
+    </div>
+</div>
+</div>
+        </section>
+        <section class="about-section" id="hero">
+            <div class="section-inner">
+                <a href="./contact.html"><h1>Ask Me Anything!</h1></a>
+            </div>
+        </section>
+    </main>
+    <br>
     <footer>
-        <p>© 2023 All rights reserved</p>
         <div class="redes">
             <a href="https://www.instagram.com/mercymolano?utm_source=qr">
                 <i class="fa-brands fa-instagram"></i>
@@ -46,9 +80,10 @@
             <a href="https://co.linkedin.com/in/mercymoreno">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-
         </div>
+        <p>© 2023 All rights reserved</p>
     </footer>
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
 </body>
+
 </html>
