About Me Completed

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -39,35 +39,36 @@
             <div>
                 <img src="../Media/Mercy.png" class="profile-img">
                 <h1>Hi, I'm Lorem the Traveler.</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi. Sit quos similique magni?</p>
             </div>
         </section>
 
         <section class="about-section" id="hero">
 <div class="results">
-    <h1>Some of the Results I'm Proud of</h1>
+    <h3>Some of the Results I'm Proud of</h3>
 <div class="section-inner">
     <div class="section-inner2">
-        <p>#</p>
-        <p>Lorem ipsum</p>
+        <p class="about-data">###</p>
+        <p class="about-label">Lorem ipsum</p>
     </div>
     <div class="section-inner2">
-        <p>#</p>
-        <p>Lorem ipsum</p>
+        <p class="about-data">###</p>
+        <p class="about-label">Lorem ipsum</p>
     </div>
     <div class="section-inner2">
-        <p>#</p>
-        <p>Lorem ipsum</p>
+        <p class="about-data">###</p>
+        <p class="about-label">Lorem ipsum</p>
     </div>
     <div class="section-inner2">
-        <p>#</p>
-        <p>Lorem ipsum</p>
+        <p class="about-data">###</p>
+        <p class="about-label">Lorem ipsum</p>
     </div>
 </div>
 </div>
         </section>
         <section class="about-section" id="hero">
-            <div class="section-inner">
-                <a href="./contact.html"><h1>Ask Me Anything!</h1></a>
+            <div class="about-contact">
+                <a href="./contact.html"><h3>Ask Me Anything!</h3></a>
             </div>
         </section>
     </main>
