--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -22,7 +22,7 @@
         <nav class="bar">
             <!-- Nav Bar Menu -->
             <ul>
-                <li> <button onclick="location.href='#'">Mercy <span>Mo 🛩️</span></button></li>
+                <li> <button onclick="location.href='../index.html'">Mercy <span>Mo 🛩️</span></button></li>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./About.html">About me</a></li>
                 <li><a href="./travel.html">Travel Tips</a></li>
