Fixing links in index

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         </div>
     </main>
     <!-- (h2#sec${Mi Título $}+section.section.sec$)*4 -->
-    <h2 id="sec1">About Me</h2>
+    <h2 id="sec1"><a href="./Pages/About.html">About Me</a></h2>
     <section class="about-section1">
         <div>
             <img src="../Media/Mercy.png" class="profile-img">
             <h1>Hi, I'm Lorem the Traveler.</h1>
+            <h3 id="sec1-button"><a href="./Pages/About.html">My Story</a></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi. Sit quos similique magni?</p>
         </div>
     </section>
