--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -38,14 +38,14 @@
               <div class="card">
                 <h2>TITLE HEADING</h2>
                 <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg" style="height:200px;">Image</div>
+                <div class="fakeimg" style="height:200px;"><img style="height:200px" src="https://picsum.photos/id/10/2500/1667" alt=""></div>
                 <p>Some text..</p>
                 <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
               </div>
               <div class="card">
                 <h2>TITLE HEADING</h2>
                 <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg" style="height:200px;">Image</div>
+                <div class="fakeimg" style="height:200px;"><img style="height:200px" src="https://picsum.photos/id/10/2500/1667" alt=""></div>
                 <p>Some text..</p>
                 <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
               </div>
