--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -7,7 +7,7 @@
             <!-- Icon for title -->
             <link rel="shortcut icon" href="../Media/Mercy.png" type="image/x-icon">
             <!-- CSS -->
-            <link rel="stylesheet" href="../styles.css">
+            <link rel="stylesheet" href="../css/custom.css">
             <!-- The hamburger menu for small screens -->
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <!-- Icons -->
