media queries for carrousel

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <!--Logo Start-->
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="navbar-brand-img" src="./Assets/Media/MercyLogo.png" alt=""></a>
+                <a class="navbar-brand" href="#"><img class="navbar-brand-img" src="./Assets/Media/MercyLogo.png"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -143,30 +144,53 @@
                 <button type="button" data-bs-target="#galleryC" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#galleryC" data-bs-slide-to="1"></button>
                 <button type="button" data-bs-target="#galleryC" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#galleryC" data-bs-slide-to="3"></button>
+                <button type="button" data-bs-target="#galleryC" data-bs-slide-to="4"></button>
+                <button type="button" data-bs-target="#galleryC" data-bs-slide-to="5"></button>
+                <button type="button" data-bs-target="#galleryC" data-bs-slide-to="6"></button>
+
             </div>
             <!-- Dash End -->
             <!-- carousel Images Start-->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./Assets/Media/Water.png" alt="Tominé" class="d-block" style="width:100%">
+                    <div class="d-flex justify-content-center">
+                        <img src="./Assets/Media/Water.png" alt="Tominé">
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./Assets/Media/Rest.jpeg" alt="Bogotá" class="d-block" style="width:100%">
+                    <div class="d-flex justify-content-center">
+                        <img src="./Assets/Media/Rest.jpeg" alt="Bogotá">
+                    </div>
+
                 </div>
                 <div class="carousel-item">
-                    <img src="./Assets/Media/People.JPG" alt="Bogotá" class="d-block" style="width:100%">
+                    <div class="d-flex justify-content-center">
+                        <img src="./Assets/Media/People.JPG" alt="Bogotá">
+                    </div>
+
                 </div>
                 <div class="carousel-item">
-                    <img src="./Assets/Media/monument.png" alt="Bogotá" class="d-block" style="width:100%">
+                    <div class="d-flex justify-content-center">
+                        <img src="./Assets/Media/monument.png" alt="Bogotá">
+                    </div>
+
                 </div>
                 <div class="carousel-item">
-                    <img src="./Assets/Media/Mer.png" alt="Bogotá" class="d-block" style="width:100%">
+                    <div class="d-flex justify-content-center">
+                        <img src="./Assets/Media/Mer.png" alt="Bogotá">
+                    </div>
+
                 </div>
                 <div class="carousel-item">
-                    <img src="./Assets/Media/graffiti.jpeg" alt="Bogotá" class="d-block" style="width:100%">
+                    <div class="d-flex justify-content-center">
+                        <img src="./Assets/Media/graffiti.jpeg" alt="Bogotá">
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./Assets/Media/fade.JPG" alt="Bogotá" class="d-block" style="width:100%">
+                    <div class="d-flex justify-content-center">
+                        <img src="./Assets/Media/fade.JPG" alt="Bogotá">
+                    </div>
                 </div>
             </div>
             <!-- carousel Images End-->
