--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -1,22 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact Me</title>
-            <!-- Icon for title -->
-            <link rel="shortcut icon" href="../Media/Mercy.png" type="image/x-icon">
-            <!-- CSS -->
-            <link rel="stylesheet" href="../css/custom.css">
-            <!-- The hamburger menu for small screens -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            <!-- Icons -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-                integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-                crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
-=======
 
 <head>
     <meta charset="UTF-8">
@@ -37,7 +20,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
->>>>>>> second
 <body>
     <header>
         <!--BS Navbar Start-->
@@ -76,7 +58,17 @@
     </header>
     <br>
     <main class="body">
-        <div class="container">
+        <section class="galeria">
+            <div class="item item1"></div>
+            <div class="item item2"></div>
+            <div class="item item3"></div>
+            <div class="item item4"></div>
+            <div class="item item5"></div>
+            <div class="item item6"></div>
+            <div class="item item7"></div>
+            <div class="item item8"></div>
+        </section>
+        <!-- <div class="container">
             <div class="gallery">
                 <div class="gallery-item">
                     <img class="gallery-image"
@@ -113,7 +105,7 @@
                         alt="people holding umbrellas on a busy street at night lit by street lights and illuminated signs in Tokyo, Japan">
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <p>© 2023 All rights reserved</p>
