Fixinf media queries for index.

--- a/index.html
+++ b/index.html
@@ -65,20 +65,12 @@
             <source src="./Assets/Media/Desert.mp4" type="video/mp4">
         </video>
         <!-- Call out -->
-        <div class="call">
-            <img id="call-image" src="./Assets/Media/zen.png" alt="Pozos Azules">
-            <h1>Hi! I'm Mercy the Traveler</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus
-                laboriosam aliquid doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Odit hic ea natus accusantium possimus laboriosam aliquid
-                doloribus nisi nobis. Quos, debitis. Maxime eius quibusdam minima? Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ab tenetur cum quos, corporis dolores commodi rem facere adipisci illo
-                reiciendis fuga, harum vel dignissimos. Totam vero voluptate id nemo. Debitis. Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Porro explicabo praesentium enim illum, perspiciatis laborum
-                reprehenderit excepturi dolorem tenetur nemo sint error! Exercitationem similique in omnis ea ut
-                expedita aliquid?</p>
-            <a href="./Pages/travel.html">Travel Tips</a>
-        </div>
+  <div class="call">
+            <img class="call--img" id="call-image" src="./Assets/Media/zen.png" alt="Pozos Azules">
+            <h1 class="call--title">Hi! I'm Mo the Traveler</h1>
+            <p class="call--par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi explicabo error corrupti eveniet ipsa doloremque atque placeat, optio delectus consequatur repellat et illo dolorem nesciunt dolores corporis veritatis, nisi totam.</p>
+            <a class="call--button" href="./Pages/travel.html">Travel Tips</a>
+        </div> 
     </main>
     <!-- (h2#sec${Mi Título $}+section.section.sec$)*4 -->
     <h2 id="sec1"><a href="./Pages/About.html">About Me</a></h2>
@@ -135,7 +127,7 @@
         </div>
 
     </section>
-    <h2 id="sec3">Gallery</h2>
+    <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
     <section class="sec3-gallery">
         <!-- Complete Carousel Start -->
         <div id="galleryC" class="carousel slide" data-bs-ride="carousel">
