Updated about me section views.

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <h2 id="sec1"><a href="./Pages/About.html">About Me</a></h2>
     <section class="about-section1">
         <div>
-            <img src="./Assets/Media/Mercy.png" class="profile-img">
-            <h1>Hi, I'm Lorem the Traveler.</h1>
+            <img src="./Assets/Media/Mercy.png" style="filter:sepia(60%)" class="profile-img">
+            <h1>Hi, I'm Mo the Traveler.</h1>
             <h3 id="sec1-button"><a href="./Pages/About.html">My Story</a></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est
                 nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi.
